# RexEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  GLFWApp.h  GLShader.cpp  GLShader.h  camera.h  core.h  debug.h  main.cpp  utils.cpp  utils.h
